0.11
Modified mysql snapshot task to read entire contents of table and process data in code in attempt to improve dump times.
Added gzip and bzip2 support to xml tasks.

0.10
Added JOSM-like date handling as a fallback if the standard xml date format isn't found.
Added a custom date parser for the special case of GMT times which this tool always produces (approx 10x speedup over JOSM code and 100x speedup over standard JDK for GMT dates).

0.9
Fixed the name of the main class attribute in the jar manifest.
Fixed a potential bug in the change application code where a validation step may have erroneously thrown errors.
Added merge tasks to combine multiple entity or change files together.

0.8
Modified node and segment readers to avoid returning duplicate records where multiple records with identical timestamps exist.
Moved main osmosis code into a "core" sub-package allowing new tools to be added.
Fixed timeouts in mysql dumping of ways by using temporary files for query results.
Refactored all temporary file handling to use common persistent iterator functionality.
Fixed some classes not marked as Serializable.
Updated change application to use less strict validation to handle "re-creates" of entities.
Updated xml writing tasks to always write in UTC format.

0.7
Made a number of changes to the mysql dump task to improve performance and reduce the likelihood of timeouts.

0.6
Modified ChangeDeriver task to set the timestamp of deleted records to the current time.
Fixed all uses of java.sql.Timestamp to be converted to java.util.Date explicitly instead of utilising inheritance.
Fixed bug in change writer where timestamps weren't being written for segments.
Added UserIdManager functionality which creates a system "Osmosis" user in the database to assign all changes to.

0.5
Modified command line date format to avoid use of spaces.

0.4
Modified mysql dump task to produce consistent snapshots.
Added the ability to skip "current" tables when importing to mysql.